Update thesis chapter 1,2,3

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -1,40 +1,208 @@
-@article{Reference1,
-	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
-	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
-	Journal = {Review of Scientific Instruments},
-	Month = {December},
-	Number = {12},
-	Numpages = {3},
-	Pages = {4477--4479},
-	Title = {Littrow Configuration Tunable External Cavity Diode Laser with Fixed Direction Output Beam},
-	Volume = {72},
-	Url = {http://link.aip.org/link/?RSI/72/4477/1},
-	Year = {2001}}
+@misc{websiteCloudcomputingmarket,
+  author    = "Louis Colombus",
+  month     = "November",
+  year      = "2013",
+  title     = "Roundup of Cloud Computing Forecasts Update, 2013",
+  howpublished = "\url{http://www.forbes.com/sites/louiscolumbus/2013/11/16/roundup-of-cloud-computing-forecasts-update-2013/}",
+}
 
-@article{Reference3,
-	Abstract = {Operating a laser diode in an extended cavity which provides frequency-selective feedback is a very effective method of reducing the laser's linewidth and improving its tunability. We have developed an extremely simple laser of this type, built from inexpensive commercial components with only a few minor modifications. A 780~nm laser built to this design has an output power of 80~mW, a linewidth of 350~kHz, and it has been continuously locked to a Doppler-free rubidium transition for several days.},
-	Author = {A. S. Arnold and J. S. Wilson and M. G. Boshier},
-	Journal = {Review of Scientific Instruments},
-	Month = {March},
-	Number = {3},
-	Numpages = {4},
-	Pages = {1236--1239},
-	Title = {A Simple Extended-Cavity Diode Laser},
-	Volume = {69},
-	Url = {http://link.aip.org/link/?RSI/69/1236/1},
-	Year = {1998}}
+@article{nistcloudcomputing,
+  author    = "Peter Mell and Timothy Grance",
+  month     = "Spetember",
+  year      = "2011",
+  title     = "The \uppercase{NIST} definition of cloud computing",
+  journal   = "Recommandation of National Institute of Standards and Technology",
+}
 
-@article{Reference2,
-	Abstract = {We present a review of the use of diode lasers in atomic physics with an extensive list of references. We discuss the relevant characteristics of diode lasers and explain how to purchase and use them. We also review the various techniques that have been used to control and narrow the spectral outputs of diode lasers. Finally we present a number of examples illustrating the use of diode lasers in atomic physics experiments. Review of Scientific Instruments is copyrighted by The American Institute of Physics.},
-	Author = {Carl E. Wieman and Leo Hollberg},
-	Journal = {Review of Scientific Instruments},
-	Keywords = {Diode Laser},
-	Month = {January},
-	Number = {1},
-	Numpages = {20},
-	Pages = {1--20},
-	Title = {Using Diode Lasers for Atomic Physics},
-	Volume = {62},
-	Url = {http://link.aip.org/link/?RSI/62/1/1},
-	Year = {1991}}
+@misc{websiteOpenstack,
+  author    = "Openstack",
+  title     = "Official website for the Openstack project",
+  howpublished = "\url{http://www.openstack.org/}",
+}
 
+@conference{virtualisation,
+  author    = "Paul, Barham and B. Dragovic and K. Fraser and S. Hand and T. Harris and A. Ho and R. Neugebauer and I. Pratt and A. Warfield",
+  title     = "Xen and the Art of Virtualisation",
+  booktitle = "19th ACM Symposium on Operating Systems Principles",
+  year      = "2003",
+}
+
+@conference{livemigration,
+  author    = "Christopher, Clark and K. Fraser and S. Hand and J. G. Hansen and E. Jul and C. Limpach and I. Pratt and A. Warfield",
+  title     = "Live Migration of Virtual Machines",
+  booktitle = "2nd Symposium on Networked Systems Design and Implementation (NSDI’05)",
+  year      = "2005",
+}
+ 
+@conference{virtresiliency,
+  author    = "Valentina Salapura",
+  title     = "Cloud computing: Virtualization and resiliency for data center computing",
+  booktitle = "30th International Conference of Computer Design",
+  year      = "2012",
+}
+
+@conference{reassignmentElectricitysaving,
+  author     = "Thomas Setzer and Alexander Stage",
+  title      = "Decision support for virtual machine reassignments in enterprise data centers",
+  booktitle  = "Network Operations and Management Symposium",
+  year       = "2010",
+}
+
+@article{reassignmentBinpacking1,
+  author     = "Weijia Song and Zhen Xiao and Qi Chen and Haipeng Luo",
+  title      = "An adaptive Resource Provisioning for the Cloud Using Online Bin Packing",
+  journal    = "Transactions on Computers",
+  year       = "2013",
+}
+
+@conference{allocationHybrid,
+  author    = "Ruben Van den Bossche, Kurt Vanmechelen and Jan Broeckhov",
+  title     = "Cost-Optimal Scheduling in Hybrid IaaS Clouds for Deadline Constrained Workloads",
+  booktitle = "3rd International Conference on Cloud Computing",
+  year      = "2010",
+}
+
+@conference{allocationHeterogeneous,
+  author    = "Mark Stillwell and Frédéric Vivien and Henri Casanova",
+  title     = "Virtual Machine Resource Allocation for Service Hosting on Heterogeneous Distributed Platforms",
+  booktitle = "Parallel \& Distributed Processing Symposium",
+  year      = "2012",
+}
+
+@conference{mathsRrndlp,
+  author    = "Neal E. Young",
+  title     = "Randomized rounding without solving the linear program",
+  booktitle = "6th ACM-SIAM Symposium on Discrete Algorithms",
+  year      = "1995",
+}
+
+@phdthesis{mathsBpheuristics,
+  author    = "David Stifler Johnson",
+  title     = "Near-Optimal Bin Packing Algorithms",
+  school    = "Massachusetts Institute of Technology",
+  year      = "1967",
+}
+
+@article{mathsRelaxedonlinebp,
+  author    = "G. Gambosi and A. Postiglione and M. Talamo",
+  title     = "Algorithms for the relaxed online bin-packing model",
+  journal   = "SIAM Journal on Computing",
+  year      = "2000",
+  number    = "5",
+  volume    = "30",
+}
+
+@article{mathsDynamiconlinebp,
+  author    = "Joseph Wun-Tat and Chan Tak-Wah Lam and Prudence W.H. Wong",
+  title     = "Dynamic Bin Packing of Unit Fractions Items",
+  journal   = "Theoretical Computer Science",
+  year      = "2008",
+  number    = "8",
+  volume    = "409",
+}
+
+@conference{reassignmentVisbp,
+  author    = "Weijia Song and Zhen Xiao and Qi Chen and Haipeng Luo",
+  title     = "Adaptive Resource Provisioning for the Cloud Using Online Bin Packing",
+  year      = "2013",
+  booktitle = "Transactions on Computers",
+}
+
+@article{allocationNetworkflow, 
+  author    = "Kimish Patel and Murali Annavaram and Massoud Pedram",
+  title     = "NFRA: Generalized Network Flow-Based Resource Allocation for Hosting Centers",
+  journal   = "IEEE Transactions on Computers",
+  volume    = "62",
+  number    = "9",
+  year      = "2013",
+}
+
+@article{algoAntcolony1,
+  author    = "Lskrao Chimakurthi and Madhu Kumar SD",
+  title     = "Power Efficient Resource Allocation for Clouds Using Ant Colony Framework",
+  journal   = "CoRR",
+  year      = "2011",
+}
+
+@conference{algoAntcolony2,
+ author     = "Feller, Eugen and Rilling, Louis and Morin, Christine",
+ title      = "Energy-Aware Ant Colony Based Workload Placement in Clouds",
+ booktitle  = "Proceedings of the 2011 IEEE/ACM 12th International Conference on Grid Computing",
+ year       = "2011",
+} 
+
+@article{algoAntcolony3,
+  author    = "Linan Zhu and Qingshui Li and Lingna He",
+  title     = "Study on Cloud Computing Resource Scheduling Strategy Based on the Ant Colony Optimization Algorithm",
+  year      = "2012",
+  journal   = "IJCSI International Journal of Computer Science",
+  number    = "5",
+  volume    = "9",
+}
+
+@conference{algoGenetics1,
+  author    = "David Wilcox and Andrew McNabb and Kevin Seppi and Kelly Flanagan",
+  title     = "Probabilistic Virtual Machine Assignment",
+  year      = "2010",
+  booktitle = "The First International Conference on Cloud Computing, GRIDs, and Virtualization",
+}
+
+@conference{algoGenetics2,
+  author    = "David Wilcox and Andrew McNabb and Kevin Seppi",
+  title     = "Solving virtual machine packing with a Reordering Grouping Genetic Algorithm",
+  year      = "2010",
+  booktitle = "IEEE Congress on Evolutionary Computation (CEC)",
+}
+
+@misc{websiteSimgrid,
+  author    = "INRIA",
+  title     = "SimGrid official website",
+  howpublished = "\url{http://simgrid.gforge.inria.fr/}",
+}
+
+@misc{websiteCloudsim,
+  author    = "Melbourne University",
+  title     = "Project page of CloudSim",
+  howpublished = "\url{https://code.google.com/p/cloudsim/}",
+}
+
+@misc{websiteRoadef,
+  author    = "ROADEF members",
+  title     = "ROADEF contest homepage",
+  howpublished = "\url{http://challenge.roadef.org/}"
+}
+
+@article{roadefIp,
+  title     = "Heuristics and matheuristics for a real-life machine reassignment problem",
+  author    = "Ramon Lopes and Vinicius W.C. Morais and Thiago F. Noronha and Vitor A.A. Souza",
+  journal   = "International Transactions in Operational Research",
+}
+
+@article{roadefBp1,
+  title     = "An Iterated Local Search Heuristic for Multi-Capacity Bin Packing andMachine Reassignment Problem",
+  author    = "Renaud Masson and Thibaut Vidal and Julien Michallet and Puca Huachi Vaz Penna andVinicius Petrucci and Anand Subramanian and Hugues Dubedout",
+  journal   = "Expert Syst. Appl.",
+  year      = "2013",
+  number    = "30",
+  volume    = "40",
+}
+
+@article{roadefBp2,
+  title     = "An MDD Approach to Multidimensional Bin Packing",
+  author    = "Brian Kell and Willem-Jan van Hoeve",
+  journal   = "Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems Lecture Notes in Computer Science",
+  volume    = "7874",
+  year      = "2013",
+}
+
+@article{websiteCRIU,
+  author    = "CRIU",
+  title     = "Checkpoint/Restore In Userspace",
+  howpublished = "\url{http://criu.org/}",
+}
+
+@article{website12Factors,
+  author    = "12 Factors",
+  title     = "The Twelve Factors",
+  howpublished = "\url{http://12factor.net/}",
+},
