--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -7,7 +7,6 @@
 \graphicspath{{Figures/}}  % Location of the graphics files (set up for graphics to be in PDF format)
 
 % Include any extra LaTeX packages required
-\usepackage[square, numbers, comma, sort&compress]{natbib}  % Use the "Natbib" style for the references in the Bibliography
 \usepackage{verbatim}  % Needed for the "comment" environment to make LaTeX comments
 \hypersetup{urlcolor=blue, colorlinks=true}  % Colours hyperlinks in blue, but this can be distracting if there are many links.
 
@@ -32,7 +31,7 @@
 % Declaration Page required for the Thesis, your institution may give you a different text to place here
 \Declaration{
 
-I, AUTHOR NAME, declare that this thesis titled, `THESIS TITLE' and the work presented in it are my own. I confirm that:
+I, Léo Unbekandt, declare that this thesis titled, `Allocation and migration of web-services isolated in Linux Containers' and the work presented in it are my own. I confirm that:
 
 \begin{itemize} 
 \item[\tiny{$\blacksquare$}] This work was done wholly or mainly while in candidature for a research degree at this University.
@@ -88,14 +87,47 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 % The Acknowledgements page, for thanking everyone
 \chapter{Acknowledgements}
 
-The acknowledgements and the people to thank go here, don't forget to include your project advisor\ldots
-
+The acknowledgements and the people to thank go here, don't forget to include
+your project advisor\ldots
 
 \clearpage  % End of the Acknowledgements
 %% ----------------------------------------------------------------
+\chapter{Source code license}
 
-\pagestyle{fancy}  %The page style headers have been "empty" all this time, now use the "fancy" headers as defined before to bring them back
+All the source code developped in the scope of the experiments done in this
+thesis are developed under the MIT Licence. The integrality of the examples
+are publicly available on GitHub \url{https://github.com/Soulou}
 
+\begin{verbatim}
+The MIT License (MIT)
+
+Copyright (c) <year> <copyright holders>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+\end{verbatim}
+
+\clearpage
+%% ----------------------------------------------------------------
+
+% The page style headers have been "empty" all this time, now
+% use the "fancy" headers as defined before to bring them back
+\pagestyle{fancy}
 
 %% ----------------------------------------------------------------
 \lhead{\emph{Contents}}  % Set the left side page header to "Contents"
@@ -115,19 +147,14 @@ The acknowledgements and the people to thank go here, don't forget to include yo
 \lhead{\emph{Abbreviations}}  % Set the left side page header to "Abbreviations"
 \listofsymbols{ll}  % Include a list of Abbreviations (a table of two columns)
 {
-% \textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere \\
-
-}
-
-%% ----------------------------------------------------------------
-\clearpage  % Start a new page
-\lhead{\emph{Physical Constants}}  % Set the left side page header to "Physical Constants"
-\listofconstants{lrcl}  % Include a list of Physical Constants (a four column table)
-{
-% Constant Name & Symbol & = & Constant Value (with units) \\
-Speed of Light & $c$ & $=$ & $2.997\ 924\ 58\times10^{8}\ \mbox{ms}^{-\mbox{s}}$ (exact)\\
-
+	\textbf{VM} & \textbf{V}irtual \textbf{M}achine \\
+	\textbf{DBMS} & \textbf{D}ata\textbf{B}ase \textbf{M}anagement \textbf{S}ystem \\
+	\textbf{HTTP} & \textbf{H}yper\textbf{T}ext \textbf{T}ransfer \textbf{P}rotocol \\
+	\textbf{HTML} & \textbf{H}yper \textbf{T}ext \textbf{M}arkup \textbf{L}anguage \\
+	\textbf{CSS} & \textbf{C}ascading \textbf{S}tyle\textbf{S}heet \\
+	\textbf{JS} & \textbf{J}ava\textbf{S}cript \\
+	\textbf{XML} & e\textbf{X}tensible \textbf{M}arktup \textbf{L}anguage \\
+	\textbf{JSON} & \textbf{J}ava\textbf{S}cript \textbf{O}bject \textbf{N}otation \\
 }
 
 %% ----------------------------------------------------------------
@@ -142,18 +169,6 @@ $P$ & power & W (Js$^{-1}$) \\
 $\omega$ & angular frequency & rads$^{-1}$ \\
 }
 %% ----------------------------------------------------------------
-% End of the pre-able, contents and lists of things
-% Begin the Dedication page
-
-\setstretch{1.3}  % Return the line spacing back to 1.3
-
-\pagestyle{empty}  % Page style needs to be empty for this page
-\dedicatory{For/Dedicated to/To my\ldots}
-
-\addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
-
-
-%% ----------------------------------------------------------------
 \mainmatter	  % Begin normal, numeric (1,2,3...) page numbering
 \pagestyle{fancy}  % Return the page headers back to the "fancy" style
 
@@ -161,10 +176,8 @@ $\omega$ & angular frequency & rads$^{-1}$ \\
 % Just uncomment the lines as you write the chapters
 
 \input{./Chapters/Chapter1} % Introduction
-
-%\input{./Chapters/Chapter2} % Background Theory 
-
-%\input{./Chapters/Chapter3} % Experimental Setup
+\input{./Chapters/Chapter2} % Background Theory 
+\input{./Chapters/Chapter3} % Experimental Setup
 
 %\input{./Chapters/Chapter4} % Experiment 1
 
@@ -193,8 +206,9 @@ $\omega$ & angular frequency & rads$^{-1}$ \\
 %% ----------------------------------------------------------------
 \label{Bibliography}
 \lhead{\emph{Bibliography}}  % Change the left side page header to "Bibliography"
+\nocite{*}
 \bibliographystyle{unsrtnat}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
-\bibliography{Bibliography}  % The references (bibliography) information are stored in the file named "Bibliography.bib"
+\bibliography{Bibliography}
 
 \end{document}  % The End
 %% ----------------------------------------------------------------
