Update 24jul, chapter 1/2

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -14,9 +14,9 @@
   journal   = "Recommandation of National Institute of Standards and Technology",
 }
 
-@misc{websiteOpenstack,
-  author    = "Openstack",
-  title     = "Official website for the Openstack project",
+@misc{websiteopenstack,
+  author    = "openstack",
+  title     = "official website for the openstack project",
   howpublished = "\url{http://www.openstack.org/}",
 }
 
@@ -32,6 +32,19 @@
   title     = "Live Migration of Virtual Machines",
   booktitle = "2nd Symposium on Networked Systems Design and Implementation (NSDI’05)",
   year      = "2005",
+}
+
+@conference{containersAsAlternative,
+  author    = "Stephen Soltesz and Herbert Pötzl and Marc E. Fiuczynski and Andy Bavier and Larry Peterson",
+  title     = "Container-based operating system virtualization: a scalable, high-performance alternative to hypervisors",
+  booktitle = "EuroSys European Conference on Computer Systems",
+  year      = "2007",
+}
+
+@misc{microservices,
+  author    = "Pawel Pacana - Arkency",
+  title     = "Microservices - 72 resources",
+  howpublished = "\url{http://blog.arkency.com/2014/07/microservices-72-resources/}",
 }
  
 @conference{virtresiliency,
