--- a/Thesis/Appendices/AppendixA.tex
+++ b/Thesis/Appendices/AppendixA.tex
@@ -1,7 +1,129 @@
-% Appendix A
 
-\chapter{Appendix Title Here}
-\label{AppendixA}
-\lhead{Appendix A. \emph{Appendix Title Here}}
+\chapter{HTTP API of the agent server}
+\lstset{language=Javascript, basicstyle=\footnotesize\ttfamily}
+\label{app:agent-api}
 
-Write your Appendix content here.
+\vspace{1em}
+\begin{lstlisting}
+/*
+ * Get current system info of the node itself (CPU, Memory, Net)
+ */
+
+// GET /status
+
+// Code: 200 - OK
+// Content-Type: application/json
+{
+  "cpus": {
+    "cpu0": 44,
+    "cpu1": 22,
+  },
+  "memory": 27440000,
+  "network": {
+    "eth0": {
+      "tx": 98765,
+      "rx": 12345
+    }
+  }
+}
+
+========================
+
+/*
+ * Get list of all running containers on the node
+ */
+
+// GET /containers
+
+// Code: 200 - OK
+// Content-Type: application/json
+[
+  {
+    "Id": "0123456789abcdef",
+    "Image": "soulou/msc-thesis-memory-http-service",
+    "Ports": [
+      {
+        "PublicPort": 49127,
+        "PrivatePort": 3000
+      }
+    ],
+    "Names": [ "service1-1-837" ],
+    "Created": 1723454345,
+    "Status": "Up"
+  },
+  {
+    ...
+  }
+]
+
+========================
+
+/* 
+ * Get information about a specific container
+ */
+
+// GET /container/:container_id
+
+// Code: 404 - Container not found
+
+// Code: 200 - OK
+// Content-Type: application/json
+
+// Docker JSON representation of a container:
+// See: http://goo.gl/JrR6f6
+
+========================
+
+/* 
+ * Get information about the resource status of a container
+ * (CPU, Memory, Net)
+ */
+
+// GET /container/:container_id/status
+
+// Code: 404 
+//   - Container not found
+//   - Data not ready (container launched for less than a second)
+
+// Code 200 - OK
+// Content-Type: application/json
+{
+  "cpu": 44,
+  "free_memory": 123456,
+  "memory": 2340354,
+  "net": {
+    "rx": 123456,
+    "tx": 123564
+  }
+}
+
+========================
+
+/*
+ * Create a new container
+ * Params:
+ *   image: Docker image to use
+ *   service: Name of the service
+ *   port (optional): Choose the given port instead
+ *     of allocating one randomly
+ */
+
+// POST /containers
+
+// Code 201 - Container created and started
+// Content-Type: application/json
+
+// Docker JSON representation of a container:
+// See: http://goo.gl/JrR6f6
+
+========================
+
+/*
+ * Stop and delete the container with the given ID.
+ */
+
+// DELETE /container/:container_id
+
+// Code 204 - Container deleted, no content in response
+\end{lstlisting}
+
