--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -146,6 +146,8 @@ THE SOFTWARE.
 
 % Include a list of Abbreviations (a table of two columns)
 \listofsymbols{ll}{\textbf{VM} & \textbf{V}irtual \textbf{M}achine \\
+	\textbf{SaaS} & \textbf{S}oftware \textbf{a}s \textbf{a} \textbf{S}ervice \\
+	\textbf{PaaS} & \textbf{P}latform \textbf{a}s \textbf{a} \textbf{S}ervice \\
 	\textbf{IaaS} & \textbf{I}nfrastructure \textbf{a}s \textbf{a} \textbf{S}ervice \\
 	\textbf{DBMS} & \textbf{D}ata\textbf{B}ase \textbf{M}anagement \textbf{S}ystem \\
 	\textbf{HTTP} & \textbf{H}yper\textbf{T}ext \textbf{T}ransfer \textbf{P}rotocol \\
@@ -154,6 +156,7 @@ THE SOFTWARE.
 	\textbf{JS} & \textbf{J}ava\textbf{S}cript \\
 	\textbf{XML} & e\textbf{X}tensible \textbf{M}arktup \textbf{L}anguage \\
 	\textbf{JSON} & \textbf{J}ava\textbf{S}cript \textbf{O}bject \textbf{N}otation \\
+	\textbf{PID} & \textbf{P}rocess \textbf{ID}entifier \\
 }
 
 %% ----------------------------------------------------------------
@@ -178,9 +181,8 @@ THE SOFTWARE.
 
 \appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
 
-\input{./Appendices/AppendixA}	% Appendix Title
-
-%\input{./Appendices/AppendixB} % Appendix Title
+\input{./Appendices/AppendixA}	% Agent API documentation
+\input{./Appendices/AppendixB}  % Controller API documentation
 
 %\input{./Appendices/AppendixC} % Appendix Title
 
