--- a/Thesis/Appendices/AppendixB.tex
+++ b/Thesis/Appendices/AppendixB.tex
@@ -7,7 +7,8 @@
 \begin{lstlisting}
 
 /*
- * Get the status of a given node, like the different resources consumption and total
+ * Get the status of a given node, like the different
+ * resources consumption and total
  */
 // GET /node/:host/status
 
