--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -3,7 +3,8 @@
 %% ---------------------------------------------------------------- 
 
 % Set up the document
-\documentclass[a4paper, 12pt, twoside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
+% \documentclass[a4paper, 12pt, twoside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
+\documentclass[a4paper, 12pt, oneside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
 \graphicspath{{Figures/}}  % Location of the graphics files (set up for graphics to be in PDF format)
 
 % Include any extra LaTeX packages required
@@ -157,6 +158,7 @@ THE SOFTWARE.
 	\textbf{XML} & e\textbf{X}tensible \textbf{M}arktup \textbf{L}anguage \\
 	\textbf{JSON} & \textbf{J}ava\textbf{S}cript \textbf{O}bject \textbf{N}otation \\
 	\textbf{PID} & \textbf{P}rocess \textbf{ID}entifier \\
+	\textbf{CM} & \textbf{C}onfiguration \textbf{M}anager \\
 }
 
 %% ----------------------------------------------------------------
@@ -181,10 +183,10 @@ THE SOFTWARE.
 
 \appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
 
+\lstset{xleftmargin=5pt}
 \input{./Appendices/AppendixA}	% Agent API documentation
 \input{./Appendices/AppendixB}  % Controller API documentation
-
-%\input{./Appendices/AppendixC} % Appendix Title
+\input{./Appendices/AppendixC} % Client Documentation
 
 \addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
 \backmatter
