--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -94,7 +94,7 @@ your project advisor\ldots
 \chapter{Source code license}
 
 All the source code developped in the scope of the experiments done in this
-thesis are developed under the MIT Licence. The integrality of the examples
+thesis are developed under the MIT License. The integrality of the examples
 are publicly available on GitHub \url{https://github.com/Soulou}
 
 \begin{verbatim}
