--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -3,8 +3,8 @@
 %% ---------------------------------------------------------------- 
 
 % Set up the document
-% \documentclass[a4paper, 12pt, twoside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
-\documentclass[a4paper, 12pt, oneside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
+\documentclass[a4paper, 12pt, twoside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
+% \documentclass[a4paper, 12pt, oneside]{Thesis}  % Use the "Thesis" style, based on the ECS Thesis style by Steve Gunn
 \graphicspath{{Figures/}}  % Location of the graphics files (set up for graphics to be in PDF format)
 
 % Include any extra LaTeX packages required
@@ -30,66 +30,35 @@
 
 %% ----------------------------------------------------------------
 % Declaration Page required for the Thesis, your institution may give you a different text to place here
-\Declaration{I, Léo Unbekandt, declare that this thesis titled, `Allocation and migration of web-services isolated in Linux Containers' and the work presented in it are my own. I confirm that:
+\Declaration{I, Léo Unbekandt, declare that this thesis titled, `Investigation and implementation of resource allocation algorithms for containerized web applications in a cloud environment' and the work presented in it are my own. I confirm that:
 
 \begin{itemize} 
 \item[\tiny{$\blacksquare$}] This work was done wholly or mainly while in candidature for a research degree at this University.
- 
 \item[\tiny{$\blacksquare$}] Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
- 
 \item[\tiny{$\blacksquare$}] Where I have consulted the published work of others, this is always clearly attributed.
- 
 \item[\tiny{$\blacksquare$}] Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
- 
 \item[\tiny{$\blacksquare$}] I have acknowledged all main sources of help.
- 
 \item[\tiny{$\blacksquare$}] Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.
 \\
 \end{itemize}
  
  
-Signed:\\
+Signed: Léo Unbekandt\\
 \rule[1em]{25em}{0.5pt}  % This prints a line for the signature
  
 Date:\\
 \rule[1em]{25em}{0.5pt}  % This prints a line to write the date
 }
 \clearpage  % Declaration ended, now start a new page
-
-%% ----------------------------------------------------------------
-% The "Funny Quote Page"
-%\pagestyle{empty}  % No headers or footers for the following pages
-
-%\null\vfill
-% Now comes the "Funny Quote", written in italics
-%\textit{``Write a funny quote here.''}
-
-%\begin{flushright}
-%If the quote is taken from someone, their name goes here
-%\end{flushright}
-
-%\vfill\vfill\vfill\vfill\vfill\vfill\null
-%\clearpage  % Funny Quote page ended, start a new page
-%% ----------------------------------------------------------------
-
-% The Abstract Page
+%% ---------------------------------------------------------------
 \chapter{Abstract}
-
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
-
-
-\clearpage  % Abstract ended, start a new page
+\input{Chapters/Abstract}
+\clearpage
 %% ----------------------------------------------------------------
-
 \setstretch{1.3}  % Reset the line-spacing to 1.3 for body text (if it has changed)
-
-% The Acknowledgements page, for thanking everyone
 \chapter{Acknowledgements}
-
-The acknowledgements and the people to thank go here, don't forget to include
-your project advisor\ldots
-
-\clearpage  % End of the Acknowledgements
+\input{Others/Acknowledgements}
+\clearpage
 %% ----------------------------------------------------------------
 \chapter{Source code license}
 
@@ -97,30 +66,7 @@ All the source code developped in the scope of the experiments done in this
 thesis are developed under the MIT License. The integrality of the examples
 are publicly available on GitHub \url{https://github.com/Soulou}
 
-\begin{verbatim}
-The MIT License (MIT)
-
-Copyright (c) <year> <copyright holders>
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in
-all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.
-\end{verbatim}
-
+\input{Others/MITLicense}
 \clearpage
 %% ----------------------------------------------------------------
 
@@ -164,6 +110,7 @@ THE SOFTWARE.
 %% ----------------------------------------------------------------
 \mainmatter	  % Begin normal, numeric (1,2,3...) page numbering
 \pagestyle{fancy}  % Return the page headers back to the "fancy" style
+\lhead{\emph{Introduction}}
 
 % Include the chapters of the thesis, as separate files
 % Just uncomment the lines as you write the chapters
@@ -172,8 +119,9 @@ THE SOFTWARE.
 \input{./Chapters/Chapter1} % Introduction
 \input{./Chapters/Chapter2} % Background Theory 
 \input{./Chapters/Chapter3} % First experiment: CPU isolation
-\input{./Chapters/Chapter4} % Main experiments: algorithm testing
-\input{./Chapters/Chapter5} % Results and Discussion
+\input{./Chapters/Chapter4} % Design of the platform
+\input{./Chapters/Chapter5} % Main experiments: algorithm testing
+\input{./Chapters/Discussions}
 \input{./Chapters/Conclusion}
 
 %% ----------------------------------------------------------------
@@ -195,7 +143,7 @@ THE SOFTWARE.
 \label{Bibliography}
 \lhead{\emph{Bibliography}}  % Change the left side page header to "Bibliography"
 \nocite{*}
-\bibliographystyle{unsrtnat}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
+\bibliographystyle{unsrtnat}
 \bibliography{Bibliography}
 
 \end{document}  % The End
