Add experimental content

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -96,6 +96,7 @@ are publicly available on GitHub \url{https://github.com/Soulou}
 	\textbf{SaaS} & \textbf{S}oftware \textbf{a}s \textbf{a} \textbf{S}ervice \\
 	\textbf{PaaS} & \textbf{P}latform \textbf{a}s \textbf{a} \textbf{S}ervice \\
 	\textbf{IaaS} & \textbf{I}nfrastructure \textbf{a}s \textbf{a} \textbf{S}ervice \\
+	\textbf{SLA} & \textbf{S}ervice \textbf{L}evel \textbf{A}grement \\
 	\textbf{DBMS} & \textbf{D}ata\textbf{B}ase \textbf{M}anagement \textbf{S}ystem \\
 	\textbf{HTTP} & \textbf{H}yper\textbf{T}ext \textbf{T}ransfer \textbf{P}rotocol \\
 	\textbf{HTML} & \textbf{H}yper \textbf{T}ext \textbf{M}arkup \textbf{L}anguage \\
@@ -121,7 +122,6 @@ are publicly available on GitHub \url{https://github.com/Soulou}
 \input{./Chapters/Chapter3} % First experiment: CPU isolation
 \input{./Chapters/Chapter4} % Design of the platform
 \input{./Chapters/Chapter5} % Main experiments: algorithm testing
-\input{./Chapters/Discussions}
 \input{./Chapters/Conclusion}
 
 %% ----------------------------------------------------------------
@@ -132,9 +132,10 @@ are publicly available on GitHub \url{https://github.com/Soulou}
 \appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
 
 \lstset{xleftmargin=5pt}
-\input{./Appendices/AppendixA}	% Agent API documentation
-\input{./Appendices/AppendixB}  % Controller API documentation
+\input{./Appendices/AppendixA}% Agent API documentation
+\input{./Appendices/AppendixB} % Controller API documentation
 \input{./Appendices/AppendixC} % Client Documentation
+\input{./Appendices/AppendixD} % List of projects
 
 \addtocontents{toc}{\vspace{2em}}  % Add a gap in the Contents, for aesthetics
 \backmatter
