--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -61,6 +61,13 @@
   year       = "2010",
 }
 
+@article{statisticalAssignment,
+ author = {Mastroianni, Carlo and Meo, Michela and Papuzzo, Giuseppe},
+ title = {Self-economy in Cloud Data Centers: Statistical Assignment and Migration of Virtual Machines},
+ booktitle = {Proceedings of the 17th International Conference on Parallel Processing - Volume Part I},
+ year = {2011},
+} 
+
 @conference{allocationHybrid,
   author    = "Ruben Van den Bossche, Kurt Vanmechelen and Jan Broeckhov",
   title     = "Cost-Optimal Scheduling in Hybrid IaaS Clouds for Deadline Constrained Workloads",
@@ -87,6 +94,13 @@
   title     = "Near-Optimal Bin Packing Algorithms",
   school    = "Massachusetts Institute of Technology",
   year      = "1967",
+}
+
+@article{variableSizeBinPacking,
+  title    = "Variable size vector bin packing heuristics – Application to the machine reassignment problem",
+  author   = "Michaël Gabay and Sofia Zaourar",
+  booktitle = "Annals of Operations Research",
+  year     = "2014",
 }
 
 @article{mathsRelaxedonlinebp,
