--- a/Thesis/Appendices/AppendixC.tex
+++ b/Thesis/Appendices/AppendixC.tex
@@ -99,6 +99,50 @@ Container 6a28e4b2ab from 192.168.114.15 has been stopped
 
 Container 192.168.1.3 - 9a2e2b2244 -> 192.168.1.18 - 406d5ce46d
 \end{lstlisting}}
+\item{Load balance infrastructure
+\begin{lstlisting}
+./client.py balance [--opt opt1=val1 [--opt opt2=va2 ...]] <algorithm>
+
+##
+# Run a load balancing or consolidation operation on the complete infrastructure
+# The algorithm can be specified the following are available:
+#
+# Implemented in the controller : [first-fit-decreasing, best-fit-decreasing]
+#
+# Implemented in third-party library [stillwell, gabay2013vsvu, brandao2013mvp]
+# https://github.com/marklee77/vpack
+#
+# Example
+#
+
+./client.py balance --opt heuristic=bin_centric --opt bin_measure=do_nothing --opt item_measure=do_nothing gabay2014vsvu
+
+{'bins': [{'capacity': [0.8, 0.8, 0.8],
+	  'remaining_capacity': [1.0, 1.0, 1.0]}, ...],
+ 'items': [[0.0, 0.0004, 0.0], ...]
+ 'migrations': [{'Service': 'service2',
+                 'Started': {'Id': '7724621e2dcccb4725d3516a2e48ad1c26bae9a7ff4c21f3cee4438c9c02d164',
+                             'Node': '192.168.114.14'},
+                 'Stopped': {'Id': 'd3f8a1e45481e39458189c194bf7337d204838e5b27ae48916fde742b1bf977f',
+		 'Node': '192.168.114.13'}}, ...],
+ 'result': {'algo-runtime': 0.00013580999999973642,
+            'bincount': 7,
+            'datetime': '2014-08-10 18:04:28.343690',
+            'failcount': 0,
+            'family': 'gabay2013vsv',
+            'kwargs': {'bin_measure': 'do_nothing',
+                       'family': 'gabay2013vsv',
+                       'heuristic': 'bin_balancing',
+                       'item_measure': 'do_nothing'},
+            'mapping': [0, 1, 2, 3, 4, 5, 6, 0, 1, 2],
+            'problem-argshash': None,
+            'solver-githash': '__GITHASH__',
+            'total-runtime': 0.00021365099999925974,
+            'verified': True}
+}
+
+\end{lstlisting}
+}
 \item{Get node or nodes status
 \begin{lstlisting}
 ./client.py node_status <host>
